--- a/assets/localization/ar-EG.json
+++ b/assets/localization/ar-EG.json
@@ -11,7 +11,11 @@
     "custom_widget": {
         "loading": "جار التحميل...",
         "upload_image": "تحميل صورة",
+        "upload_video": "تحميل فيديو",
+        "resend": "أعد الإرسال بعد {} ثانية",
+        "resend_title": "إعادة إرسال الرمز",
         "try_again": "حاول مرة اخرى",
+        "unexpected_error": "حدث خطأ غير متوقع",
         "done": "تم",
         "cancel": "إلغاء",
         "choose_image": "اختر صورة",
@@ -68,5 +72,19 @@
         "email_required": "يرجى إدخال بريدك الإلكتروني",
         "email_invalid": "يرجى إدخال عنوان بريد إلكتروني صالح",
         "username_required": "يرجى إدخال اسم المستخدم"
+    },
+    "global": {
+        "view_all": "عرض الكل",
+        "search_hint": "ابحث هنا...",
+        "filter_hint": "حدد تاريخ البداية والنهاية",
+        "all_status": "جميع الحالات",
+        "completed": "مكتمل",
+        "verified": "مؤكد",
+        "pending": "بانتظار المراجعة",
+        "canceled": "ملغي",
+        "add": "إضافة",
+        "edit": "تعديل",
+        "delete": "حذف",
+        "continue": "متابعة"
     }
 }
