feat: Implement API execution and error handling with Dio
- Added `api_executer.dart` for executing API calls with network checks and error handling.
- Introduced `app_interceptor.dart` to manage request headers and handle token refresh logic.
- Created `end_points.dart` for centralized API endpoint management.
- Defined `status_code.dart` for standardized HTTP status codes.
- Established a result handling structure in `result.dart` for API responses.
- Introduced `base_state.dart` for managing UI states.
- Configured dependency injection in `injectable_config.dart` and `register_module.dart`.
- Removed obsolete error handling classes and replaced them with a new `failures.dart` structure.
- Added `handle_errors.dart` for centralized error handling.
- Implemented network connectivity checks in `network_info.dart`.
- Created `no_internet_widget.dart` for user feedback on connectivity issues.
- Updated home feature API client and data sources to utilize new structures and error handling.
- Refactored domain entities and use cases to align with new API response structures.
- Updated localization keys in `locale_keys.g.dart` for error messages.
- Added necessary dependencies for connectivity and error handling in `pubspec.yaml`.

--- a/assets/localization/ar-EG.json
+++ b/assets/localization/ar-EG.json
@@ -1,12 +1,14 @@
 {
     "error_api_failure": {
         "connectionError": "فشل الاتصال بالخادم",
-        "connectionTimeout": "انتهت مدة الاتصال بالخادم",
-        "cancelled": "تم إلغاء الطلب",
-        "unknown": "فشل الاتصال بالخادم بسبب مشكلة في الاتصال بالإنترنت",
-        "receiveTimeout": "انتهت مدة استلام البيانات من الخادم",
-        "sendTimeout": "انتهت مدة إرسال البيانات إلى الخادم",
-        "unexpected_error": "حدث خطأ غير متوقع"
+        "connectionTimeout": "فشل الاتصال بالخادم",
+        "cancelled": "تم إلغاء الطلب إلى الخادم",
+        "unknown": "فشل الاتصال بالخادم بسبب مشاكل في الاتصال بالإنترنت",
+        "receiveTimeout": "فشل الاتصال بالخادم أثناء استلام البيانات",
+        "sendTimeout": "فشل الاتصال بالخادم أثناء إرسال البيانات",
+        "unexpected_error": "حدث خطأ غير متوقع",
+        "badCertificate": "شهادة غير صالحة من الخادم",
+        "expiredToken": "انتهت صلاحية الجلسة، يرجى تسجيل الدخول مرة أخرى"
     },
     "custom_widget": {
         "loading": "جار التحميل...",
