feat: Add home route and implement API client for products and categories
- Added a new route for home page in routes.dart.
- Updated import paths for locale keys in multiple widget files.
- Created a new CustomRadioListTitle widget for better radio button handling.
- Implemented ApiClient for fetching products and categories using Retrofit.
- Updated HomeRemoteDataSourceImpl to return results wrapped in a Result type.
- Created use cases for fetching products and categories.
- Implemented HomeCubit to manage state for products and categories.
- Developed HomePage to display lists of products and categories.
- Removed unused splash feature files and cleaned up dependencies.
- Updated pubspec.yaml to reflect new dependencies and versions.

--- a/assets/localization/ar-EG.json
+++ b/assets/localization/ar-EG.json
@@ -87,6 +87,8 @@
         "add": "إضافة",
         "edit": "تعديل",
         "delete": "حذف",
-        "continue": "متابعة"
+        "continue": "متابعة",
+        "no_internet": "لا يوجد اتصال بالإنترنت!",
+        "check_internet": "تحقق من اتصالك بالإنترنت وحاول مرة أخرى."
     }
 }
