feat: Integrate internet connection checker and enhance error handling in API execution

--- a/assets/localization/ar-EG.json
+++ b/assets/localization/ar-EG.json
@@ -3,7 +3,8 @@
         "connectionError": "فشل الاتصال بالخادم",
         "connectionTimeout": "فشل الاتصال بالخادم",
         "cancelled": "تم إلغاء الطلب إلى الخادم",
-        "unknown": "فشل الاتصال بالخادم بسبب مشاكل في الاتصال بالإنترنت",
+        "unknown": "حدث خطأ غير متوقع في الاتصال بالخادم ، يرجى المحاولة لاحقًا!",
+        "server_error": "خطأ في الخادم، يرجى المحاولة لاحقًا!",
         "receiveTimeout": "فشل الاتصال بالخادم أثناء استلام البيانات",
         "sendTimeout": "فشل الاتصال بالخادم أثناء إرسال البيانات",
         "unexpected_error": "حدث خطأ غير متوقع",
